--- a/src/Layers/MSHB.StockAssistanceProvider.Layers.L03_Services/MSHB.StockAssistanceProvider.Layers.L03_Services.csproj
+++ b/src/Layers/MSHB.StockAssistanceProvider.Layers.L03_Services/MSHB.StockAssistanceProvider.Layers.L03_Services.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.0" />
+    <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.Security" Version="4.4.*" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +21,10 @@
     <ProjectReference Include="..\MSHB.StockAssistanceProvider.Layers.L01_Entities\MSHB.StockAssistanceProvider.Layers.L01_Entities.csproj" />
     <ProjectReference Include="..\MSHB.StockAssistanceProvider.Layers.L02_DataLayer\MSHB.StockAssistanceProvider.Layers.L02_DataLayer.csproj" />
     <ProjectReference Include="..\MSHB.StockAssistanceProvider.Layers.L04_ViewModels\MSHB.StockAssistanceProvider.Layers.L04_ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
