--- a/src/Presentation/MSHB.StockAssistanceProvider.Presentation.WebUI/appsettings.json
+++ b/src/Presentation/MSHB.StockAssistanceProvider.Presentation.WebUI/appsettings.json
@@ -27,21 +27,16 @@
     "RefreshTokenObjectKey": "refresh_token",
     "AdminRoleName": "Admin"
   },
-
-
-
   "SearchSize": {
     "Size": 15
   },
 
-
   "UserAttachedFile": {
-    "PhysicalPath": "C:\\Csharp\\temp",
-    "AvatarImagePath": "C:\\Csharp\\temp\\default.thumb",
+    "PhysicalPath": "Files",
+    "AvatarImagePath": "Files\\default.thumb",
     "MaxSizeInMb": 200
   },
   "SeedMode": "Development", // 'development' or 'product'
-
   "AdminUserSeed": {
     "Username": "Admin",
     "Password": "123@123",
@@ -49,24 +44,9 @@
     "RoleName": "Admin",
     "Name": "Admin"
   },
-
-
-
-  "Smtp": {
-    "Server": "127.0.0.1",
-    "Username": "m.rahimi@zsoftdept.com",
-    "Password": "123@456#Pass",
-    "Port": 25,
-    "LocalDomain": "",
-    "UsePickupFolder": true,
-    "PickupFolder": "C:\\smtppickup",
-    "FromName": "Zaeim Soft Dept",
-    "FromAddress": "do-not-reply@zsoftdept.com"
-  },
   "ConnectionStrings": {
     "SqlServer": {
       "ApplicationDbContextConnection": "Data Source=.;Initial Catalog=StockAssistanceProvider;User id=sa; Password=Aa123456;"
-      //"ApplicationDbContextConnection": "Data Source=.;Initial Catalog=DbWebUI;Integrated Security=true"
     },
     "LocalDb": {
       "InitialCatalog": "StockAssistanceProvider",
@@ -109,49 +89,5 @@
   "UserAvatarImageOptions": {
     "MaxWidth": 150,
     "MaxHeight": 150
-  },
-  "EmailsBanList": [
-    "yandex.com",
-    "spamdecoy.net",
-    "wavemail.ir",
-    "mailinator.com",
-    "trbvm.com",
-    "emeil.com",
-    "chmail.com",
-    "30mail.ir",
-    "gmx.de",
-    "walkmail.net",
-    "temp-mail.org",
-    "emeil.ir",
-    "techgroup.me",
-    "sharklasers.com",
-    "my.com",
-    "emailirani.ir",
-    "rocketmail.com",
-    "inboxdesign.me",
-    "ymail.com",
-    "lormail.ir",
-    "vatanmail.ir",
-    "torkmail.ir",
-    "kordmail.ir",
-    "gilmail.ir",
-    "lakmail.ir",
-    "arabmail.ir",
-    "balochmail.ir",
-    "turkmenmail.ir",
-    ".ru"
-  ],
-  "PasswordsBanList": [
-    "password",
-    "password1",
-    "123456",
-    "12345678",
-    "1234",
-    "qwerty",
-    "12345",
-    "dragon",
-    "******"
-  ]
-
-
+  }
 }
